--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
   "devDependencies": {
     "angular-mocks": "~1.2.20",
     "es5-shim": "~4.0.1",
-    "jasmine-as-promised": "~0.0.8"
+    "jasmine-as-promised": "~0.0.8",
+    "pouchdb-authentication": "~0.3.6"
   },
   "overrides": {
     "jasmine-as-promised": {
