--- a/bower.json
+++ b/bower.json
@@ -21,14 +21,14 @@
     "!dist"
   ],
   "dependencies": {
-    "angular": "~1.2.25",
-    "pouchdb": "~3.0.6"
+    "angular": "~1.3.7",
+    "pouchdb": "~3.2.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.20",
     "es5-shim": "~4.0.1",
     "jasmine-as-promised": "~0.0.8",
-    "pouchdb-authentication": "~0.3.6"
+    "pouchdb-authentication": "~0.3.6",
+    "angular-mocks": "~1.3.7"
   },
   "overrides": {
     "jasmine-as-promised": {
