--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ cache:
   directories:
     - node_modules
     - bower_components
+before_script:
+  - npm run bower-install
 after_script:
   - npm run coveralls
