chore(eslint): bump ruleset as of 0.17.1

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,10 +13,10 @@ rules:
   no-use-before-define: 2
   new-cap: 2
   no-undef: 2
-  no-unused-vars: 2
-  global-strict:
+  strict:
     - 2
-    - always
+    - global
+  global-strict: 0
   no-extra-parens: 2
   brace-style:
     - 2
@@ -34,9 +34,6 @@ rules:
   no-eq-null: 2
   no-floating-decimal: 2
   radix: 2
-  no-unused-vars:
-    - 2
-    - {vars: all, args: all}
   space-in-brackets:
     - 2
     - never
@@ -44,3 +41,7 @@ rules:
   operator-assignment:
     - 2
     - always
+  indent:
+    - 2
+    - 2
+  space-before-function-parentheses: never
