--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-pouchdb",
-  "version": "2.0.0-rc.2",
+  "version": "2.0.0",
   "authors": [
     "Wilfred Springer <wilfredspringer@gmail.com>",
     "Tom Vincent <http://tlvince.com/contact>"
