--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "annotate": "ng-annotate -a - > dist/angular-pouchdb.js",
     "bower-install": "bower install",
-    "build": "mkdir -p dist && npm --silent run wrap | npm run annotate && npm run uglify",
+    "prebuild": "mkdir -p dist",
+    "build": "npm --silent run wrap | npm run annotate",
+    "postbuild": "npm run uglify",
     "coveralls": "cat test/coverage/*/lcov.info | coveralls",
     "lint": "eslint angular-pouchdb.js test/*.js",
     "prepublish": "semantic-release pre",
