--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "bugs": {
     "url": "https://github.com/angular-pouchdb/angular-pouchdb/issues"
   },
-  "homepage": "https://github.com/angular-pouchdb/angular-pouchdb",
+  "homepage": "https://angular-pouchdb.github.io/angular-pouchdb/",
   "devDependencies": {
     "bower": "^1.3.12",
     "coveralls": "^2.11.2",
