--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "coveralls": "^2.11.2",
-    "eslint": "^0.17.1",
+    "eslint": "^0.21.2",
+    "eslint-config-tlvince": "^1.0.0",
     "jasmine-core": "^2.1.3",
     "karma": "^0.12.24",
     "karma-cli": "0.0.4",
