chore: lint on pretest

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint angular-pouchdb.js test/*.js",
     "prepublish": "npm run build && semantic-release pre",
     "postpublish": "semantic-release post",
+    "pretest": "eslint angular-pouchdb.js karma.conf.js test/*.js",
     "test": "karma start",
     "watch": "karma start --autoWatch true --singleRun false",
     "wrap": "cat prefix.js angular-pouchdb.js suffix.js",
@@ -36,8 +37,8 @@
     "angular-mocks": "^1.4.1",
     "coveralls": "^2.11.2",
     "es5-shim": "^4.1.3",
-    "eslint": "^0.21.2",
-    "eslint-config-tlvince": "^1.0.0",
+    "eslint": "^0.23.0",
+    "eslint-config-tlvince": "^1.1.2",
     "jasmine-core": "^2.1.3",
     "karma": "^0.12.24",
     "karma-cli": "0.0.4",
