--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "es5-shim": "^4.1.3",
     "eslint": "^0.23.0",
     "eslint-config-tlvince": "^1.1.2",
+    "eslint-plugin-jasmine": "^1.3.0",
     "jasmine-core": "^2.1.3",
     "karma": "^0.12.24",
     "karma-cli": "0.0.4",
