chore: disable strict ESLint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,8 @@ globals:
 rules:
   newline-after-var: 0
   no-continue: 0
+  spaced-comment: 0
+  array-bracket-spacing: 0
   jasmine/no-suite-dupes:
     - 2
     - branch
