--- a/.travis.yml
+++ b/.travis.yml
@@ -5,23 +5,14 @@ node_js:
 cache:
   directories:
     - node_modules
-env:
-  global:
-    # GH_TOKEN
-    secure: nGV9qROOr7mwI8gJAMiDrLt4stoqG7skSoBBJzHlMteRXJX/obRyNA76GY1wFs0klo4WWMQxzWs4yvv3rwFMMKIopP9/fu+lRJ7pokbl5c5czGiYtNwMUPxWHvm7AEVss+ugl/VTpO+DkuWScIgRWSPBmN4s3zmvHrMUop3BWnE=
 notifications:
   email: false
 before_install:
-  - npm config set spin false --global
+  - npm i -g npm@^2.0.0
+before_script:
+  - npm prune
 after_script:
   - npm run coveralls
   - ./scripts/bower-deploy.sh
-deploy:
-  provider: npm
-  email: npm@tlvince.com
-  skip_cleanup: true
-  api_key:
-    secure: aFX9DqdPKXiv2LfVe6iFK/+8Dsfl7TsXZaQBoiXm6Xb4krrzliCfhmZGYWotztVhQlRmnCkkj3jdjUmM7SRK9zVoM20OoSyhr+flJHDo9LCsfNpXrjLlAekIjBCaKHTjr4d86GGj4nCLh6zqcHFEjDc8s83vX7FNjMs5MnmvbXE=
-  on:
-    branch: master
-    repo: angular-pouchdb/angular-pouchdb
+after_success:
+  - npm run semantic-release
