--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "angular-pouchdb",
-  "version": "0.0.0-semantically-released",
   "description": "AngularJS wrapper for PouchDB",
   "main": "dist/angular-pouchdb.js",
   "scripts": {
@@ -10,13 +9,13 @@
     "postbuild": "npm run uglify",
     "coveralls": "cat test/coverage/*/lcov.info | coveralls",
     "lint": "eslint angular-pouchdb.js test/*.js",
-    "prepublish": "npm run build && semantic-release pre",
-    "postpublish": "semantic-release post",
     "pretest": "eslint angular-pouchdb.js karma.conf.js test/*.js",
     "test": "karma start",
     "watch": "karma start --autoWatch true --singleRun false",
     "wrap": "cat prefix.js angular-pouchdb.js suffix.js",
-    "uglify": "uglifyjs dist/angular-pouchdb.js -mc > dist/angular-pouchdb.min.js"
+    "uglify": "uglifyjs dist/angular-pouchdb.js -mc > dist/angular-pouchdb.min.js",
+    "presemantic-release": "npm run build",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
@@ -48,7 +47,7 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "ng-annotate": "^0.14.1",
     "pouchdb": "^3.6.0",
-    "semantic-release": "^3.2.0",
+    "semantic-release": "^4.0.3",
     "tlvince-blob-shim": "^1.0.0",
     "uglify-js": "^2.4.16"
   }
