fix: make build scripts Windows friendly
Closes #60.

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "main": "dist/angular-pouchdb.js",
   "scripts": {
     "annotate": "ng-annotate -a - > dist/angular-pouchdb.js",
-    "prebuild": "mkdir -p dist",
+    "prebuild": "rimraf dist && mkdirp dist",
     "build": "npm --silent run wrap | npm run annotate",
     "postbuild": "npm run uglify",
-    "coveralls": "cat test/coverage/*/lcov.info | coveralls",
+    "coveralls": "coveralls < test/coverage/lcov/lcov.info",
     "lint": "eslint angular-pouchdb.js test/*.js",
     "pretest": "eslint angular-pouchdb.js karma.conf.js test/*.js",
     "test": "karma start",
     "watch": "karma start --autoWatch true --singleRun false",
-    "wrap": "cat prefix.js angular-pouchdb.js suffix.js",
+    "wrap": "catw prefix.js angular-pouchdb.js suffix.js",
     "uglify": "uglifyjs dist/angular-pouchdb.js -mc > dist/angular-pouchdb.min.js",
     "presemantic-release": "npm run build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
@@ -34,6 +34,7 @@
   "devDependencies": {
     "angular": "^1.4.1",
     "angular-mocks": "^1.4.1",
+    "catw": "^1.0.1",
     "coveralls": "^2.11.2",
     "es5-shim": "^4.1.3",
     "eslint": "^0.24.1",
@@ -45,8 +46,10 @@
     "karma-coverage": "^0.2.7",
     "karma-jasmine": "^0.3.3",
     "karma-phantomjs-launcher": "^0.1.4",
+    "mkdirp": "^0.5.1",
     "ng-annotate": "^0.14.1",
     "pouchdb": "^3.6.0",
+    "rimraf": "^2.4.2",
     "semantic-release": "^4.0.3",
     "tlvince-blob-shim": "^1.0.0",
     "uglify-js": "^2.4.16"
