chore: add Firefox test runner

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "karma": "^0.12.24",
     "karma-cli": "0.0.4",
     "karma-coverage": "^0.2.7",
+    "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.3",
     "karma-phantomjs-launcher": "^0.1.4",
     "mkdirp": "^0.5.1",
