chore: use Bower versions to test
In case they become out of sync, e.g. with Greenkeeper

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "npm --silent run wrap | npm run annotate",
     "postbuild": "npm run uglify",
     "coveralls": "coveralls < test/coverage/lcov/lcov.info",
+    "postinstall": "bower install",
     "pretest": "eslint angular-pouchdb.js karma.conf.js test/*.js",
     "test": "karma start",
     "watch": "karma start --autoWatch true --singleRun false",
@@ -31,8 +32,7 @@
   },
   "homepage": "https://angular-pouchdb.github.io/angular-pouchdb/",
   "devDependencies": {
-    "angular": "1.4.7",
-    "angular-mocks": "1.4.7",
+    "bower": "1.5.3",
     "catw": "1.0.1",
     "coveralls": "2.11.4",
     "es5-shim": "4.1.13",
@@ -48,7 +48,6 @@
     "karma-phantomjs-launcher": "0.1.4",
     "mkdirp": "0.5.1",
     "ng-annotate": "0.14.1",
-    "pouchdb": "4.0.3",
     "rimraf": "2.4.3",
     "semantic-release": "4.3.5",
     "tlvince-blob-shim": "1.0.0",
