--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,8 @@
   "dependencies": {
     "angular": "~1.4.1",
     "pouchdb": "~4.0.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.4.1"
   }
 }
