--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ notifications:
   email: false
 before_install:
   - npm i -g npm@^2.0.0
+  - bower install
 before_script:
   - npm prune
   - export DISPLAY=:99.0
