--- a/package.json
+++ b/package.json
@@ -32,8 +32,12 @@
     "url": "https://github.com/angular-pouchdb/angular-pouchdb/issues"
   },
   "homepage": "https://angular-pouchdb.github.io/angular-pouchdb/",
+  "dependencies": {
+    "angular": ">=1 <2",
+    "pouchdb": "5.0.0"
+  },
   "devDependencies": {
-    "bower": "1.5.3",
+    "angular-mocks": ">=1 <2",
     "catw": "1.0.1",
     "coveralls": "2.11.4",
     "es5-shim": "4.1.13",
