--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "url": "https://github.com/angular-pouchdb/angular-pouchdb/issues"
   },
   "homepage": "https://angular-pouchdb.github.io/angular-pouchdb/",
+  "engines": {
+    "node": ">=4 <5"
+  },
   "dependencies": {
     "angular": ">=1 <2",
     "pouchdb": "5.4.0"
