--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "angular": ">=1 <2",
-    "pouchdb": "6.0.4"
+    "pouchdb-browser": "6.0.4"
   },
   "devDependencies": {
     "angular-mocks": ">=1 <2",
@@ -57,6 +57,7 @@
     "karma-phantomjs-launcher": "0.1.4",
     "mkdirp": "0.5.1",
     "ng-annotate": "0.14.1",
+    "pouchdb": "6.0.4",
     "publish-repo": "2.0.3",
     "rimraf": "2.4.3",
     "semantic-release": "4.3.5",
