--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "angular": ">=1 <2",
-    "pouchdb-browser": "6.0.7"
+    "pouchdb-browser": "^6.0.7"
   },
   "devDependencies": {
     "angular-mocks": ">=1 <2",
